profilelist1exp/unpackaged/objects/S_P_Vendor_Additional_Information__c.object
<CustomObject>
    <description>This custom object will store additional information for Microsoft.</description>
    <fields>
        <fullName>Agreement_Level__c</fullName>
        <label>Agreement Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>A2</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Number__c</fullName>
        <label>Approval Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deal_Reg_Status__c</fullName>
        <label>Deal Reg Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Not Eligible</fullName>
                </value>
                <value>
                    <fullName>Limited Approval</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Sent to Vendor</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EA_Enterprise_Product_Quantity__c</fullName>
        <label>EA Enterprise Product Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EA_Enterprise_Product_Total__c</fullName>
        <label>EA Enterprise Product Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EA_Enterprise_Product_Unit_Price__c</fullName>
        <label>EA Enterprise Product Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EA_Enterprise_Product__c</fullName>
        <label>EA Enterprise Product</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EA_Fees_Total__c</fullName>
        <label>EA Fees Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EA_Type__c</fullName>
        <label>EA Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EA</fullName>
                </value>
                <value>
                    <fullName>EAP</fullName>
                </value>
                <value>
                    <fullName>ECI</fullName>
                </value>
                <value>
                    <fullName>EAS</fullName>
                </value>
                <value>
                    <fullName>SCE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EA</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products_Included__c</fullName>
        <label>Products Included</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recalculated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recalculated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIP_Incentive__c</fullName>
        <label>SIP Incentive</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIP_Threshold_Met__c</fullName>
        <label>SIP Threshold Met</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_P_Vendor_Product_Threshold__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>S&amp;P Vendor Product Threshold</label>
        <referenceTo>S_P_Vendor_Product_Threshold__c</referenceTo>
        <relationshipLabel>S&amp;P Vendor Additional Information</relationshipLabel>
        <relationshipName>S_P_Vendor_Additional_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>S_P_Vendors_ID__c</fullName>
        <label>S&amp;P Vendors ID</label>
        <referenceTo>S_P_Vendors__c</referenceTo>
        <relationshipLabel>S&amp;P Vendor Additional Information</relationshipLabel>
        <relationshipName>S_P_Vendor_Additional_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SnP_Vendor_ID__c</fullName>
        <label>SnP Vendor ID</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>S&amp;P Vendor Additional Information</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>SnP_Vendor_ID__c</columns>
        <columns>Products_Included__c</columns>
        <columns>Level__c</columns>
        <columns>S_P_Vendor_Product_Threshold__c</columns>
        <columns>Deal_Reg_Status__c</columns>
        <columns>Agreement_Level__c</columns>
        <columns>S_P_Vendors_ID__c</columns>
        <columns>EA_Type__c</columns>
        <columns>SIP_Incentive__c</columns>
        <columns>Total__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <displayFormat>SVAI # {000000000}</displayFormat>
        <label>S&amp;P Vendor Additional Information ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>S&amp;P Vendor Additional Informations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>